--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="google-site-verification" content="AsE1UYnpaba7v-l0y8j9LhXp9BDW6d2T80iEz2wZcG4" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
